deploy/kube/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prod-client
  namespace: batleforc-portfolio
  labels:
    app: prod-client
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: prod-client
  type: ClusterIP
